@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-14T16:22:00Z",
-  "count" : 2,
+  "timestamp" : "2022-04-28T08:19:20Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 2,
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
