@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-04-27T01:23:37Z",
+  "timestamp" : "2022-04-28T08:19:20Z",
   "count_outdated" : 250,
   "uniques_outdated" : 112,
   "count" : 261,
@@ -7,9 +7,9 @@
   "views" : [
     {
       "timestamp": "2022-04-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -39,6 +39,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-04-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
