@@ -4,8 +4,8 @@
   "views": [
     {
       "timestamp": "2022-04-14T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2022-04-25T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
